--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,39 @@
 	<modules>
 	 <module>chapter_001</module>
 	</modules>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugin</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
+				<configuration>
+					<compilerVersion>1.8</compilerVersion>
+				</configuration>
+
+			</plugin>
+			<plugin>
+                		<groupId>org.apache.maven.plugins</groupId>
+                		<artifactId>maven-checkstyle-plugin</artifactId>
+                		<version>2.17</version>
+                		<executions>
+                    			<execution>
+                        			<id>validate</id>
+                        			<phase>validate</phase>
+                        			<configuration>
+                           				<configLocation>checkstyle.xml</configLocation>
+                            				<encoding>UTF-8</encoding>
+                            				<consoleOutput>true</consoleOutput>
+                            				<failsOnError>true</failsOnError>
+                            				<includeTestSourceDirectory>true</includeTestSourceDirectory>
+                       				</configuration>
+                        			<goals>
+                            				<goal>check</goal>
+                       				</goals>
+                    			</execution>
+                		</executions>
+            		</plugin>
+		</plugins>
+	</build>
 </project>
