--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,34 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ru.avoronin</groupId>
-	<artifactId>java-a-to-z</artifactId>
+	<artifactId>junior</artifactId>
 	<packaging>pom</packaging>
-	<version>1.0</version>
+	<version>2.0</version>
 
 	<modules>
-	 <module>chapter_001</module>
+	 <module>chapter1</module>
 	</modules>
+	
+	<properties>
+        	<maven.compiler.source>1.8</maven.compiler.source>
+        	<maven.compiler.target>1.8</maven.compiler.target>
+        	<project.build.sourceencoding>UTF-8</project.build.sourceencoding>
+    	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
