--- a/pom.xml
+++ b/pom.xml
@@ -1,84 +1,93 @@
-<project>
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>avoronin</groupId>
-	<artifactId>junior</artifactId>
-	<packaging>pom</packaging>
-	<version>2.0</version>
+﻿<project>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>avoronin</groupId>
+    <artifactId>junior</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0</version>
 
-	<modules>
-	 <module>chapter1</module>
-	</modules>
-	
-	<properties>
-        	<maven.compiler.source>1.8</maven.compiler.source>
-        	<maven.compiler.target>1.8</maven.compiler.target>
-        	<project.build.sourceencoding>UTF-8</project.build.sourceencoding>
-    	</properties>
+    <modules>
+        <module>chapter1</module>
+    </modules>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugin</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<compilerVersion>1.8</compilerVersion>
-				</configuration>
+    <dependencies>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-			</plugin>
-			<plugin>
-                		<groupId>org.apache.maven.plugins</groupId>
-                		<artifactId>maven-checkstyle-plugin</artifactId>
-                		<version>2.17</version>
-                		<executions>
-                    			<execution>
-                        			<id>validate</id>
-                        			<phase>validate</phase>
-                        			<configuration>
-                           				<configLocation>checkstyle.xml</configLocation>
-                            				<encoding>UTF-8</encoding>
-                            				<consoleOutput>true</consoleOutput>
-                            				<failsOnError>true</failsOnError>
-                            				<includeTestSourceDirectory>true</includeTestSourceDirectory>
-                       				</configuration>
-                        			<goals>
-                            				<goal>check</goal>
-                       				</goals>
-                    			</execution>
-                		</executions>
-            		</plugin>
-			<plugin>
-                		<groupId>org.codehaus.mojo</groupId>
-                		<artifactId>findbugs-maven-plugin</artifactId>
-                		<version>3.0.4</version>
-                		<configuration>
-                   			<xmlOutput>true</xmlOutput>
-                		</configuration>
-                		<executions>
-                    			<execution>
-                        			<id>verify</id>
-                        			<phase>verify</phase>
-                        			<goals>
-                            				<goal>check</goal>
-                        			</goals>
-                    			</execution>
-                		</executions>
-            		</plugin>
-		</plugins>
-	</build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <executions>
+                    <execution>
+                        <id>validate</id>
+                        <phase>validate</phase>
+                        <configuration>
+                            <configLocation>checkstyle.xml</configLocation>
+                            <encoding>UTF-8</encoding>
+                            <consoleOutput>true</consoleOutput>
+                            <failsOnError>true</failsOnError>
+                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                        </configuration>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <check>
+                        <branchRate>60</branchRate>
+                        <lineRate>60</lineRate>
+                        <haltOnFailure>true</haltOnFailure>
+                        <totalBranchRate>60</totalBranchRate>
+                        <totalLineRate>60</totalLineRate>
+                        <packageLineRate>60</packageLineRate>
+                        <packageBranchRate>60</packageBranchRate>
+                    </check>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>verify</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <compilerVersion>1.8</compilerVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
