--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 ﻿<project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>avoronin</groupId>
-    <artifactId>junior</artifactId>
+    <groupId>ru.avoronin</groupId>
+    <artifactId>java-a-to-z</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
 
