--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
     <artifactId>junior</artifactId>
     <packaging>pom</packaging>
     <version>2.0</version>
+	<name>junior</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -11,12 +12,10 @@
         <project.build.sourceencoding>UTF-8</project.build.sourceencoding>
     </properties>
 
-
-    <modules>
-        <module>chapter1</module>
-        <module>chapter2</module>
-    </modules>
-
+	<modules>
+		<module>chapter1</module>
+		<module>chapter2</module>
+	</modules>
 
     <dependencies>
         <dependency>
