--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<modules>
 		<module>chapter1</module>
 		<module>chapter2</module>
+		<module>chapter3</module>
 	</modules>
 
     <dependencies>
