pom.xml ref and test classes created

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     </properties>
 
     <modules>
-        <module>chapter1</module>
-        <module>chapter2</module>
+        <!--<module>chapter1</module>-->
+        <!--<module>chapter2</module>-->
         <module>chapter3</module>
     </modules>
 
