--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,17 @@
             <scope>test</scope>
         </dependency>
         <!--<dependency>-->
+            <!--<groupId>org.mockito</groupId>-->
+            <!--<artifactId>mockito-all</artifactId>-->
+            <!--<version>1.10.19</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
+        </dependency>
+        <!--<dependency>-->
         <!--<groupId>com.github.stefanbirkner</groupId>-->
         <!--<artifactId>system-rules</artifactId>-->
         <!--<version>1.3.0</version>-->
