--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <!--<module>chapter2</module>-->
         <!--<module>chapter3</module>-->
         <module>chapter4</module>
+        <!--<module>chapter5</module>-->
     </modules>
 
     <dependencies>
