--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <!--<module>chapter3</module>-->
         <!--<module>chapter4</module>-->
         <module>chapter5</module>
+        <module>chapter6</module>
     </modules>
 
     <dependencies>
