--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,9 @@
         <!--<module>chapter2</module>-->
         <!--<module>chapter3</module>-->
         <!--<module>chapter4</module>-->
-        <module>chapter5</module>
+        <!--<module>chapter5</module>-->
         <module>chapter6</module>
+        <module>chapter7</module>
     </modules>
 
     <dependencies>
