--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>ru.job4j</groupId>
     <artifactId>java-a-to-z</artifactId>
     <packaging>pom</packaging>
-    <version>2.0</version>
+    <version>1.0</version>
     <name>java-a-to-z</name>
 
     <properties>
@@ -20,7 +20,8 @@
         <!--<module>chapter4</module>-->
         <!--<module>chapter5</module>-->
         <!--<module>chapter6</module>-->
-        <module>chapter7</module>
+        <!--<module>chapter7</module>-->
+        <module>chapter8</module>
     </modules>
 
     <dependencies>
