--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
     </modules>
 
     <dependencies>
+        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.postgresql/postgresql &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.postgresql</groupId>-->
+            <!--<artifactId>postgresql</artifactId>-->
+            <!--<version>42.1.1</version>-->
+        <!--</dependency>-->
         <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all &ndash;&gt;-->
         <!--<dependency>-->
             <!--<groupId>org.hamcrest</groupId>-->
