--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,9 @@
                 <version>2.10</version>
                 <configuration>
                     <failOnWarning>true</failOnWarning>
+                    <ignoredDependencies>
+                        <ignoredDependency>org.postgresql:postgresql:jar:42.1.1</ignoredDependency>
+                    </ignoredDependencies>
                 </configuration>
                 <executions>
                     <execution>
