--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
                     <failOnWarning>true</failOnWarning>
                     <ignoredDependencies>
                         <ignoredDependency>org.postgresql:postgresql:jar:42.1.1</ignoredDependency>
+                        <ignoredDependency>org.apache.commons:commons-pool2:jar:2.4.2</ignoredDependency>
                     </ignoredDependencies>
                 </configuration>
                 <executions>
