--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
         <!--<module>chapter5</module>-->
         <!--<module>chapter6</module>-->
         <!--<module>chapter7</module>-->
-        <module>chapter8</module>
+        <!--<module>chapter8</module>-->
+        <module>chapter9</module>
     </modules>
 
     <dependencies>
