--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
         <!--<module>chapter6</module>-->
         <!--<module>chapter7</module>-->
         <!--<module>chapter8</module>-->
-        <module>chapter9</module>
+        <!--<module>chapter9</module>-->
+        <module>chapter10</module>
     </modules>
 
     <dependencies>
@@ -46,12 +47,12 @@
             <!--<version>4.12</version>-->
             <!--<scope>test</scope>-->
         <!--</dependency>-->
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/log4j/log4j &ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>log4j</groupId>-->
-            <!--<artifactId>log4j</artifactId>-->
-            <!--<version>1.2.17</version>-->
-        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.mockito</groupId>-->
             <!--<artifactId>mockito-all</artifactId>-->
@@ -68,6 +69,14 @@
         <!--<artifactId>system-rules</artifactId>-->
         <!--<version>1.3.0</version>-->
         <!--</dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
